Add content to navmenu

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,6 +1,16 @@
-<a mat-list-item><mat-icon>assignment</mat-icon> &nbsp; Item</a>
-<a mat-list-item><mat-icon>assignment</mat-icon> &nbsp; Item</a>
-<a mat-list-item><mat-icon>assignment</mat-icon> &nbsp; Item</a>
-<a mat-list-item><mat-icon>assignment</mat-icon> &nbsp; Item</a>
-<a mat-list-item><mat-icon>assignment</mat-icon> &nbsp; Item</a>
-<a mat-list-item><mat-icon>assignment</mat-icon> &nbsp; Item</a>
+<mat-card class="head-card">
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Hello World</mat-card-title>
+        <mat-card-subtitle>180010001</mat-card-subtitle>
+    </mat-card-header>
+</mat-card>
+
+<a mat-list-item><mat-icon>list</mat-icon> &nbsp; Feed</a>
+<a mat-list-item><mat-icon>event</mat-icon> &nbsp; Events</a>
+<a mat-list-item><mat-icon>people</mat-icon> &nbsp; People</a>
+<a mat-list-item><mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog</a>
+<a mat-list-item><mat-icon>message</mat-icon> &nbsp; CMS</a>
+<a mat-list-item><mat-icon>event_available</mat-icon> &nbsp; Calendar</a>
+<a mat-list-item><mat-icon>access_time</mat-icon> &nbsp; Time Table</a>
+<a mat-list-item><mat-icon>map</mat-icon> &nbsp; Map</a>
