--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,3 +1,23 @@
-<div *ngFor="let event of events">
-  {{ event.name }}
+<div class="header">Upcoming!</div>
+
+<div *ngIf="events">
+    <mat-card class="head-card">
+        <img mat-card-image [src]="events[0].image_url">
+        <div> {{ events[0].name }} </div>
+        <span class="subhead">{{ dataService.GetDate(events[0].start_time) }}</span>
+    </mat-card>
+
+    <mat-card *ngFor="let event of events.slice(1, events.length)" 
+                class="sub-card">
+        <mat-card-header>
+          <img *ngIf="event.image_url;else placeholder" mat-card-avatar [src]="event.image_url" />
+          
+          <ng-template #placeholder>
+              <img mat-card-avatar src="/assets/placeholder.png" />
+          </ng-template>
+
+          <mat-card-title>{{ event.name }}</mat-card-title>
+          <mat-card-subtitle>{{ dataService.GetDate(event.start_time) }}</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
 </div>
