Add some logic to event-details

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,3 +1,5 @@
-<p>
-  event-details works!
-</p>
+<div *ngIf="event">
+  {{ event.id }}<br>
+  {{ event.name }}<br>
+  {{ event.image_url }}
+</div>
