--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
 </mat-card>
 
-<a mat-list-item><mat-icon>list</mat-icon> &nbsp; Feed</a>
+<a [routerLink]="['/feed']" mat-list-item><mat-icon>list</mat-icon> &nbsp; Feed</a>
 <a mat-list-item><mat-icon>event</mat-icon> &nbsp; Events</a>
 <a mat-list-item><mat-icon>people</mat-icon> &nbsp; People</a>
 <a mat-list-item><mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog</a>
