--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     [class.example-is-mobile]="mobileQuery.matches">
 
     <!-- Toolbar at top. The name of the page should be clickable when in desktop mode -->
-    <mat-toolbar class="mat-elevation-z3 example-toolbar" color="primary">
+    <mat-toolbar class="mat-elevation-z3 example-toolbar" color="primary" *ngIf="dataService.showToolbar">
         <button mat-icon-button sidebarjsOpen><mat-icon>menu</mat-icon></button>
 
         <h1 class="example-app-name">
@@ -18,8 +18,7 @@
     </mat-toolbar>
 
     <!-- Sidenav -->
-    <mat-sidenav-container class="sidenav-container"
-                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav-container class="sidenav-container" [class.add-margin-mobile]="dataService.showToolbar">
 
         <!-- Outlet for the router page -->
         <div id="outlet-div">
