Add back button to event-details

--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -11,6 +11,13 @@
     margin-bottom: 10px;
 }
 
+.back-button {
+    left: 10px; top: 10px;
+    z-index: 2;
+    position: absolute;
+    cursor: pointer;
+}
+
 .card-header {
     padding: 12px;
     padding-bottom: 3px;
