--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="event" class="detail-card mat-elevation-z3">
     <div class='theme-header'>
-      <img style="width:100%;" [src]="event.image_url">
+      <button mat-icon-button class="back-button"><mat-icon>arrow_back</mat-icon></button>
+      <img style="width:100%; height:auto;" [src]="event.image_url">
       <div class="card-header">
         <div class="event-name">{{ event.name }}</div>
         <div class="event-time">{{ dataService.GetDate(event.start_time) }}</div>
