Show event details inside feed component

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -20,3 +20,8 @@
         </mat-card-header>
     </mat-card>
 </div>
+
+<app-event-details
+    *ngIf="showingEventDetails"
+    [eventId]="eventDetailsId">
+</app-event-details>
