--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,8 +5,9 @@
     }
 }
 
-#outlet-div {
+.outlet-div {
     margin-top:30px;
+    z-index: 1;
 }
 
 .fill-space {
@@ -18,13 +19,13 @@
         margin: 5px;
     }
 
-    #outlet-div {
-        margin-top: 0px;
-    }
-
-    .add-margin-mobile {
+    .outlet-div {
         margin-top: 50px;
     }
+}
+
+.no-margin {
+    margin-top: 0;
 }
 
 #logout:hover {
@@ -58,6 +59,16 @@ mat-sidenav.mat-closed.mat-locked-open-add-active {
 
 .example-toolbar {
     z-index: 2;
+    -webkit-transition: transform 0.5s;
+    transition: transform 0.5s;
+}
+
+.hide-toolbar {
+    transform: translateY(-105%);
+}
+
+.below {
+    z-index: 1;
 }
 
 .example-is-mobile .example-toolbar {
@@ -76,6 +87,9 @@ h1.example-app-name {
     /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
     flex: 1;
+    position: fixed;
+    width:100%; height: 100%;
+    top:0;
 }
 
 .example-is-mobile .sidenav-container {
