--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="events">
+    <div style="height:56px"></div>
     <mat-card class="head-card" (click)=OpenEvent(events[0])>
         <img mat-card-image [src]="events[0].image_url">
         <div> {{ events[0].name }} </div>
