--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,18 @@
     z-index: 1;
 }
 
+#swipe-right-area {
+    /* Uncomment and set opacity to 0.5 for debugging */
+    /* background-color:green; */
+    opacity: 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh; 
+    width: 3vw;
+    z-index: 1000;
+}
+
 .fill-space {
     flex: 1 1 auto;
 }
