Add image placeholders

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -5,7 +5,7 @@
               (click)="closeEventDetails()">
           <mat-icon>arrow_back</mat-icon>
       </button>
-      <img style="width:100%; height:auto;" [src]="event.image_url">
+      <img style="width:100%; height:auto;" [src]="event.image_url" src-fallback="/assets/placeholder.png">
       <div class="card-header">
         <div class="event-name">{{ event.name }}</div>
         <div class="event-time">{{ dataService.GetDate(event.start_time) }}</div>
