--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -10,11 +10,7 @@
                (click)=OpenEvent(event)
                 class="sub-card">
         <mat-card-header>
-          <img *ngIf="event.image_url;else placeholder" mat-card-avatar [src]="event.image_url" />
-          
-          <ng-template #placeholder>
-              <img mat-card-avatar src="/assets/placeholder.png" />
-          </ng-template>
+          <img mat-card-avatar [src]="event.image_url" src-fallback="/assets/placeholder.png"/>
 
           <mat-card-title>{{ event.name }}</mat-card-title>
           <mat-card-subtitle>{{ dataService.GetDate(event.start_time) }}</mat-card-subtitle>
