--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="event" class="detail-card mat-elevation-z3">
+<div class="full-container">
+  <div *ngIf="event" class="detail-card mat-elevation-z3">
     <div class='theme-header'>
       <button mat-icon-button
               class="back-button"
@@ -21,5 +22,5 @@
         {{ event.description }}
       </p>
     </div>
+  </div>
 </div>
-  
