Remove toolbar shadow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <div #swipeArea id="swipe-right-area" sidebarjsOpen (panright)="clickHamburger()"></div>
 
-<mat-toolbar class="mat-elevation-z3 example-toolbar" color="primary"
+<mat-toolbar class="example-toolbar" color="primary"
              [class.hide-toolbar]="!dataService.showToolbar">
     <button mat-icon-button sidebarjsOpen><mat-icon>menu</mat-icon></button>
 
