Improved desktop layout further

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,5 +1,5 @@
 <div class="full-container">
-  <div *ngIf="event" class="detail-card mat-elevation-z3">
+  <div *ngIf="event" class="detail-card">
     <div class='theme-header'>
       <button mat-icon-button
               class="back-button"
