--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,5 +1,4 @@
-<div class="flex-container">
-  <div *ngIf="events">
+<div *ngIf="events" class="events-list">
     <div class="toolbar-margin"></div>
     <mat-card class="head-card" (click)=OpenEvent(events[0])>
         <img mat-card-image [src]="events[0].image_url">
@@ -17,13 +16,12 @@
           <mat-card-subtitle>{{ dataService.GetDate(event.start_time) }} | {{ event.venues_str }}</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
-  </div>
+</div>
 
-  <div class="event-details-container" *ngIf="!mobileQuery.matches">
+<div class="event-details-container mat-elevation-z3" *ngIf="!mobileQuery.matches">
     <app-event-details
       *ngIf="showingEventDetails"
       [eventId]="eventDetailsId">
     </app-event-details>
     <div style="height:20px"></div>
-  </div>
 </div>
