--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -1,37 +1,19 @@
-.flex-container {
-    display: flex;
-    margin:auto;
-}
-
-.flex-container > div {
-    margin: 10px;
-    padding: 20px;
-}
-
-@media (max-width: 767px) {
-    .flex-container {
-        display: inline;
+@media (min-width: 768px) {
+    .events-list {
+        position: absolute;
+        left: calc(46% - 400px);
+        margin: 10px;
     }
 
-    .flex-container > div {
-        margin: 0;
-        padding: 20px;
+    .event-details-container {
+        position: fixed;
+        left: 54%;
+        max-height: calc(100% - 100px);
+        top: 80px;
+        width:auto;
+        min-width: 400px;
+        overflow: auto;
     }
-}
-
-@media (max-width: 430px) {
-    .flex-container > div {
-        padding: 0;
-    }
-}
-
-.event-details-container {
-    position: fixed;
-    left: 50%;
-    top: 50px;
-    max-height:calc(100% - 120px);
-    width:auto;
-    overflow: auto;
 }
 
 .head-card {
