--- a/src/app/navmenu/navmenu.component.css
+++ b/src/app/navmenu/navmenu.component.css
@@ -1,8 +1,12 @@
 .head-card {
     height: 40px;
-    background-color: #5bc7ca;
+    background-color: #4DB6AC;
     margin-top: -10px;
     box-shadow: none !important;
+}
+
+.header-title {
+    color: white;
 }
 
 .example-header-image {
