--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -19,7 +19,7 @@
 
 .theme-header {
     width: 100%;
-    background-color: #5bc7ca;
+    background-color: #4DB6AC;
     margin-bottom: 10px;
 }
 
