--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,7 +1,7 @@
 <mat-card class="head-card">
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Hello World</mat-card-title>
+        <mat-card-title class="header-title">Hello World</mat-card-title>
         <mat-card-subtitle>180010001</mat-card-subtitle>
     </mat-card-header>
 </mat-card>
