--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -26,7 +26,7 @@
 .back-button {
     left: 10px; top: 10px;
     z-index: 2;
-    position: absolute;
+    position: fixed;
     cursor: pointer;
 }
 
