Change back button to fab

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,7 +1,7 @@
 <div class="full-container">
   <div *ngIf="event" class="detail-card">
     <div class='theme-header'>
-      <button mat-icon-button
+      <button mat-mini-fab color="accent"
               class="back-button"
               (click)="closeEventDetails()">
           <mat-icon>arrow_back</mat-icon>
