Add calendar component

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -11,6 +11,6 @@
 <a mat-list-item><mat-icon>people</mat-icon> &nbsp; People</a>
 <a mat-list-item><mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog</a>
 <a mat-list-item><mat-icon>message</mat-icon> &nbsp; CMS</a>
-<a mat-list-item><mat-icon>event_available</mat-icon> &nbsp; Calendar</a>
+<a [routerLink]="['/calendar']" mat-list-item><mat-icon>event_available</mat-icon> &nbsp; Calendar</a>
 <a mat-list-item><mat-icon>access_time</mat-icon> &nbsp; Time Table</a>
 <a mat-list-item><mat-icon>map</mat-icon> &nbsp; Map</a>
