Add AddEvent button to calendar

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,3 +1,9 @@
 <div class="toolbar-margin"></div>
 
 <xunk-calendar [selectedDate]="selDate"></xunk-calendar>
+
+<button mat-fab
+        class="float-fixed-right-bottom"
+        (click)="AddEvent()">
+    <mat-icon>add</mat-icon>
+</button>
