Add some layout to add-event

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -1,5 +1,11 @@
 <div id="main">
-<p>
-  add-event works!
-</p>
+
+<button mat-mini-fab color="accent"
+    class="back-button"
+    (click)="close()">
+  <mat-icon>arrow_back</mat-icon>
+</button>
+
+<img style="width:100%; height:auto;" src="" src-fallback="/assets/add_image_placeholder.png">
+
 </div>
