--- a/src/app/add-event/add-event.component.css
+++ b/src/app/add-event/add-event.component.css
@@ -2,3 +2,10 @@
     min-height: 100vh;
     background-color: white;
 }
+
+.back-button {
+    left: 10px; top: 10px;
+    z-index: 2;
+    position: fixed;
+    cursor: pointer;
+}
