Add more layout to add-event

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -6,6 +6,14 @@
   <mat-icon>arrow_back</mat-icon>
 </button>
 
-<img style="width:100%; height:auto;" src="" src-fallback="/assets/add_image_placeholder.png">
+<div class="theme-header">
+  <img style="width:100%; height:auto;" src="" src-fallback="/assets/add_image_placeholder.png">
+
+  <div class="card-header">
+      <mat-form-field color="accent" class="full-width">
+        <input matInput name="event_name" placeholder="Event Name">
+      </mat-form-field>
+  </div>
+</div>
 
 </div>
