--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,13 @@
         height: 56px;
     }
 }
+
+.theme-header {
+    width: 100%;
+    background-color: #4DB6AC;
+    margin-bottom: 10px;
+}
+
+.full-width {
+    width: 100%;
+}
