--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -29,12 +29,20 @@
         <mat-datepicker #toPicker></mat-datepicker>
     </mat-form-field>
   </div>
-  <div style="display:flex; margin-top: -10px;">
+  <div style="display:flex;">
     <mat-form-field class="half-width">
         <input matInput placeholder="Time" type="time">
     </mat-form-field>
     <mat-form-field class="half-width">
         <input matInput placeholder="Time" type="time">
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field class="full-width-details">
+        <mat-select placeholder="Venues" [formControl]="venues" multiple>
+          <mat-option *ngFor="let venue of venuesList" [value]="venue">{{venue}}</mat-option>
+        </mat-select>
     </mat-form-field>
   </div>
 </div>
