--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -18,7 +18,7 @@
 
 <div class="details-view full-width">
   <div style="display:flex;">
-    <mat-form-field class="half-width">
+    <mat-form-field class="half-width middle-gap">
       <input matInput [matDatepicker]="fromPicker" placeholder="From">
       <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
       <mat-datepicker #fromPicker></mat-datepicker>
@@ -30,7 +30,7 @@
     </mat-form-field>
   </div>
   <div style="display:flex;">
-    <mat-form-field class="half-width">
+    <mat-form-field class="half-width middle-gap">
         <input matInput placeholder="Time" type="time">
     </mat-form-field>
     <mat-form-field class="half-width">
@@ -45,6 +45,20 @@
         </mat-select>
     </mat-form-field>
   </div>
+
+  <div>
+    <mat-form-field class="full-width-details">
+      <textarea matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="2"
+                matAutosizeMaxRows="6"></textarea>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <button mat-raised-button color="accent" class="full-width-details">
+      Create
+    </button>
+  </div>
+  <br>
 </div>
 
 </div>
