--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -40,7 +40,7 @@
 
   <div>
     <mat-form-field class="full-width-details">
-        <mat-select placeholder="Venues" [formControl]="venues" multiple>
+        <mat-select [(ngModel)]="event.venue_names" placeholder="Venues" [formControl]="venues" multiple>
           <mat-option *ngFor="let venue of venuesList" [value]="venue">{{venue}}</mat-option>
         </mat-select>
     </mat-form-field>
@@ -49,12 +49,15 @@
   <div>
     <mat-form-field class="full-width-details">
       <textarea matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="2"
-                matAutosizeMaxRows="6"></textarea>
+                matAutosizeMaxRows="6" [(ngModel)]="event.description">
+      </textarea>
     </mat-form-field>
   </div>
 
   <div>
-    <button mat-raised-button color="accent" class="full-width-details">
+    <button mat-raised-button color="accent"
+            class="full-width-details"
+            (click)="create()">
       Create
     </button>
   </div>
