--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,6 +1,8 @@
 <div class="toolbar-margin"></div>
 
-<xunk-calendar [selectedDate]="selDate"></xunk-calendar>
+<div class="calendar-container">
+    <xunk-calendar [selectedDate]="selDate"></xunk-calendar>
+</div>
 
 <button mat-fab
         class="float-fixed-right-bottom"
