--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,14 @@ body, div {
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color:blue;
+}
+
 .toolbar-margin {
     height: 70px;
 }
