Add margins at top and bottom to add-event on desktop

--- a/src/app/add-event/add-event.component.css
+++ b/src/app/add-event/add-event.component.css
@@ -5,6 +5,13 @@
     margin: auto;
 }
 
+@media (min-width: 768px) {
+    #main {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
 .back-button {
     left: 10px; top: 10px;
     z-index: 2;
