Add layout to login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
-<p>
-  login works!
-</p>
+<div class="login-container">
+  <img src="/assets/tile.jpg" class="login-button">
+  <button mat-raised-button color="accent" class="login-button">Login with LDAP SSO</button>
+  <button mat-raised-button color="warn" class="login-button">Continue as Guest</button>
+</div>
