--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,15 @@
 <div class="login-container">
   <img src="/assets/tile.jpg" class="login-button">
-  <button mat-raised-button color="accent" class="login-button">Login with LDAP SSO</button>
-  <button mat-raised-button color="warn" class="login-button">Continue as Guest</button>
+  <button mat-raised-button
+          (click)='login()'
+          color="accent"
+          class="login-button">
+      Login with LDAP SSO
+  </button>
+
+  <button mat-raised-button
+          color="warn"
+          class="login-button">
+      Continue as Guest
+  </button>
 </div>
