--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-container">
+<div class="login-container" *ngIf="!authenticating">
   <img src="/assets/tile.jpg" class="login-button">
   <button mat-raised-button
           (click)='login()'
