Add login button

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,8 @@
 
   <button mat-raised-button
           color="warn"
-          class="login-button">
+          class="login-button"
+          (click)="guest()">
       Continue as Guest
   </button>
 </div>
