--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
     <h1 class="example-app-name">
         {{ this.titleService.getTitle() }}
     </h1>
+
+    <div class="fill-space"></div>
+    <button mat-button (click)="login()">Log In</button>
 </mat-toolbar>
 
 <main [@routerTransition]="getState(o)"
