Fix navmenu after logout

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,8 +1,7 @@
 <div class="head-card">
     <div style="display: flex;">
         <img class="profile-pic"
-             [src]="profilePic"
-             src-fallback="https://material.angular.io/assets/img/examples/shiba1.jpg">
+             [src]="profilePic">
         <div>
             <div class="header-title">{{ userName }}</div>
             <div>{{ ldap }}</div>
