Change to tile background for now Android chrome doesn't seem to respect not repeating the background, and the layout is terrible as a result...

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container" *ngIf="!authenticating">
-  <img src="/assets/tile.jpg" class="login-button">
+  <img src="/assets/tile_red.jpg" class="login-button">
   <button mat-raised-button
           (click)='login()'
           color="accent"
