--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
+html {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
 body, .image-background {
     background-image: url("/assets/tile.jpg");
     background-repeat: repeat;
